# follow_me_ws

./: .gitignore  poc.ipynb
src/follow_me/: package.xml  setup.py
src/follow_me/config/: follow_me.xml  my_nav2_params.yaml  nav2_params.yaml
src/follow_me/follow_me/: follow_me_action_client.py  follow_me_action_server.py  tracker.py
src/follow_me/launch/: all_bring_up.launch  nav.launch  nav.launch.py  robot.launch  robot.launch.py  slam.launch  slam.launch.py  yolo.launch
src/follow_me/urdf/: tracer_mini.urdf
src/follow_me_action/: package.xml  setup.cfg  setup.py
src/follow_me_action/follow_me_action/: follow_me_action_client.py  follow_me_action_server.py
src/follow_me_action/launch/: follow_me.launch.py
src/follow_me_launch/: package.xml  setup.cfg  setup.py
src/follow_me_launch/config/: follow_me.xml  my_nav2_params.yaml
src/follow_me_launch/launch/: slam.launch
src/follow_me_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/follow_me_msgs/action/: FollowMe.action
src/follow_me_msgs/msg/: ResultArray.msg  YoloResult.msg
src/follow_me_msgs/srv/: PersonId.srv  PersonTracking.srv
src/follow_me_robot/: package.xml  setup.cfg  setup.py
src/follow_me_robot/launch/: sensor.launch.py
src/follow_me_tracking/: Dockerfile  package.xml  setup.cfg  setup.py
src/follow_me_tracking/follow_me_tracking/: fmp_client.py  follow_me_action_client.py  follow_me_action_server.py  kalmanFilter.py  kalmanTracker.py  poc.ipynb  publisher_member_function.py  subscriber_member_function.py  tracker.py  tracking_service.py  upo_subscriber.py  velodyne_subscriber.py
src/follow_me_yolo/: package.xml  setup.cfg  setup.py
src/follow_me_yolo/follow_me_yolo/: YoloNode.py  YoloNode_scan.py  testing.ipynb
