<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_me</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nardy@todo.todo">nardy</maintainer>
  <license>Apache-2.0</license>

  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>
  <depend>velodyne</depend>
  <!-- <depend>tracer_base</depend> -->
  <depend>point_cloud_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>follow_me_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
