<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_me_tracking</name>
  <version>0.0.0</version>
  <description>
    ROS message definitions for Follow Me application.
  </description>
  <maintainer email="ngoak@islab.snu.ac.kr">Leonard Ngo</maintainer>
  <license>Apache-2.0</license>

  <depend>geometry_msgs</depend>
  <depend>follow_me_msgs</depend>
  <depend>nav2_msgs</depend>
	<depend>upo_laser_people_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
